--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sqflite: ^2.3.3+1
   path_provider: ^2.1.3
   cupertino_icons: ^1.0.6
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
