--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,12 @@ dependencies:
   shamsi_date: ^1.1.0
   mask_text_input_formatter: ^2.3.0
   sqflite: ^2.3.3+1
-  path_provider: ^2.1.3
+  path_provider: ^2.1.5
   cupertino_icons: ^1.0.6
   intl: ^0.20.2
+  permission_handler: ^12.0.1
+  file_picker: ^10.3.3
+
 
 dev_dependencies:
   flutter_test:
