--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "Poultry farm management app: allows users to register and track br
 # جلوگیری از انتشار تصادفی به pub.dev
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ^3.9.2
@@ -24,6 +24,8 @@ dependencies:
   permission_handler: ^12.0.1
   file_picker: ^10.3.3
   file_saver: ^0.2.14 # به‌روزرسانی به آخرین نسخه سازگار
+  shared_preferences: ^2.1.0
+  package_info_plus : ^9.0.0
 
 dev_dependencies:
   flutter_test:
